syntax = "proto2";

package unaryecho;

// EchoRequest is the request for echo.
message EchoRequest {
  required string message = 1;
}

// EchoResponse is the response for echo.
message EchoResponse {
  required string message = 1;
}

// Echo is the echo service.
service Echo {
  // UnaryEcho is unary echo.
  rpc UnaryEcho(EchoRequest) returns (EchoResponse) {}
}
